# proper-cli

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: run_tests.yml  upload-to-pypi.yml
proper_cli/: __init__.py  help_mixin.py  helpers.py  main.py  parser.py
proper_cli/pastel/: __init__.py  pastel.py  stack.py  style.py
src/proper_cli/: helpers.py  main.py  parser.py
src/proper_cli/pastel/: stack.py
tests/: conftest.py  test_main.py  test_parser.py
tests/pastel/: conftest.py  test_api.py  test_pastel.py  test_stack.py  test_style.py
