[metadata]
name = proper-cli
version= 1.1.1
url = https://github.com/jpsca/proper-cli
project_urls =
    Issue tracker = https://github.com/jpsca/proper-cli/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_files = MIT-LICENSE
description = A minimal and ridiculously good looking command-line-interface toolkit.
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >=3.7,<4.0
install_requires =

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-import-order
    flake8-logging-format
    flake8-quotes
    pytest
    pytest-cov

dev =
    pre-commit
    tox


[flake8]
application-package-names = proper_cli
application-import-names = proper_cli
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'
    E501,
    F405,  # F405 x defined from star imports

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,


[tool:pytest]
addopts = --doctest-modules
